@@ -173,3 +173,6 @@ ldap_group_objectclass_attr: groupOfNames
 # see http://colszowka.heroku.com/2011/02/22/setting-up-your-custom-hoptoad-notifier-endpoint-for-free-using-errbit-on-heroku
 #errbit_api_key: api_key_of_your_app
 #errbit_host: installation.of.errbit.com
+
+# default to access restricted projects
+# default_access_disabled: true
