@@ -40,6 +40,8 @@ Features
  * Support multiple binary backends in one OBS instance. This means that
    multiple seperate servers can host a defined part of the binary results.
 
+ * The api can be configured to access protect all new created projects by default
+
 Deprecated:
 ===========
 
